# storbit---backend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.local.yml  manage.py  pyproject.toml  requirements.txt  requirments.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: checks.yml  dev_deploy.yml
apps/: models.py
apps/category/: models.py  serializers.py  urls.py  views.py
apps/category/migrations/: 0001_initial.py
apps/event/: models.py
apps/events/: models.py  serializers.py  urls.py  views.py
apps/events/migrations/: 0001_initial.py  0002_alter_event_id.py  0002_remove_event_event_image_event_event_status_and_more.py
apps/friends/: models.py  serializers.py  urls.py  views.py
apps/friends/migrations/: 0001_initial.py
apps/mainpage/: models.py  pagination.py  serializers.py  urls.py  views.py
apps/message/: models.py
apps/message/migrations/: 0001_initial.py  0002_initial.py
apps/mypage/: apps.py  models.py
apps/mystudy/: apps.py  models.py
apps/reviews/: models.py
apps/reviews/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
apps/studies/: consumers.py  models.py  routing.py  urls.py
apps/studies/migrations/: 0001_initial.py  0002_alter_study_category_alter_study_gender_and_more.py  0002_initial.py  0003_dailymission_leadermission_studymember.py  0003_studymember_description.py  0003_studyroom.py  0003_vote.py  0004_alter_study_thumbnail_url.py  0004_alter_studymember_role.py  0004_alter_studyroom_options_remove_studyroom_max_members_and_more.py  0005_studyfavorite.py  0006_alter_studyfavorite_created_at.py
apps/studies/serializers/: application_serializers.py  mainpage_serializer.py  missions.py  study_application_serializers.py  study_favorite.py  study_favorite_list.py  study_room.py  study_serializers.py  studyrooms.py  studyrooms_application.py  studyrooms_apply.py  vote.py
apps/studies/views/: __init__.py  application_views.py  mainpage_views.py  missions.py  study_application_view.py  study_favorite.py  study_favorite_list.py  study_room.py  study_views.py  (+4 more)
apps/study_apply/: apps.py  models.py  serializers.py  urls.py  views.py
apps/users/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
config/: __init__.py  asgi.py  urls.py
config/settings/: base.py  celery.py  dev.py  local.py
resources/nginx/: Dockerfile  nginx.dev.conf  nginx.local.conf
resources/scripts/: code_formatting.sh  test.sh
(+14 files in other folders)
