[project]
name = "storbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "django>=5.2.4",
    "django-redis>=6.0.0",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "psycopg2-binary>=2.9.10",
    "uvicorn[standard]>=0.35.0",
]

[tool.black]
line-length = 120

[tool.isort]
profile="black"

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
python_version = 3.12
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.base"